--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v1
       - name: Build
         run: |
-          npm run init
+          npm i
           npm run build
       - name: Commit files
         run: |
