--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "gitbook build . docs && touch docs/CNAME && echo 'go.wuhaolin.cn' > docs/CNAME"
   },
   "dependencies": {
-    "gitbook-cli": "^2.3.2",
-    "gitbook-plugin-injection": "^1.1.3"
+    "gitbook-cli": "^2.3.2"
   }
 }
